refactor(domain): align entity IDs and fix packages